# internal/http_server/models/models.go
@@ -10,8 +10,8 @@ type Data struct {
 }
 
 type SongAndGroup struct {
-	Group string `json:"group" validate:"required"`
-	Song  string `json:"song" validate:"required"`
+	Group string `json:"group,omitempty"`
+	Song  string `json:"song,omitempty"`
 }
 
 type SongDetails struct {
